MOHP-119 : Fixed progress tracker overlap icon issue in smaller devices

--- a/src/app/shared/modal/progress-tracker/progress-tracker.component.scss
+++ b/src/app/shared/modal/progress-tracker/progress-tracker.component.scss
@@ -94,6 +94,14 @@
     overflow-y: scroll;
     max-height: 77vh;
     width: 100%;
+    
+    @include max375{
+      padding: 35px 10px 15px;
+    }
+    
+    @include max360{
+      padding: 35px 5px 15px;
+    }
 
     &__close {
       background: url('../../../../assets/images/comprehensive/progress-tracker/close-icon18x18.svg');
